# MiVA

./: .env.example  .gitignore  AGENTS.md  README.md  copy.md  package-lock.json  package.json  railway.toml
.github/workflows/: release-desktop.yml
apps/api/: .env.example  package-lock.json  package.json  railway.toml  tsconfig.json
apps/desktop/: .env.example  .env.production.example  README.md  index.html  package-lock.json  package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  overlay.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/local-helper/: .env.example  demo.env.example  package-lock.json  package.json
apps/voice-worker/: README.md  requirements.txt  server.py
apps/web/: .env.example  index.html  package-lock.json  package.json  server.mjs  vercel.json
docs/: ADMIN_PAGE.md  CODING_AGENT_POLICY.md  CODING_GUIDELINES.md  DATABASE_DESIGN.md  DEPLOYMENT.md  DESIGN.md  DEV_SERVICES.md  GO-LIVE.md  LOCAL_DATA_STORE.md  MIVA_PRODUCT_PLAN.md  PRD.md  PRESENTATION_API_DESIGN.md  RULES.md  SCOPE_1.md  SERVER_SERVICES.md  SOFTWARE_DESIGN_DOCUMENT.md  STT_STRATEGY.md  TECH_STACK.md  TODO.md  WORK_PRIORITIES.md  bug-list-and-github-issues.md  initial-design.md
docs/milestone/: API_DESIGN_UPDATE.md  BUG_TRACKING.md  (+5 more)
infra/: docker-compose.yml
scripts/: apply-release-env.mjs  check.mjs  copy-last-nsis-installer.cmd  dev-services.mjs  finish-desktop-release.ps1  package-outside-cursor.cmd  release.env.example  verify-packaging.mjs
(+223 files in other folders)
